--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1258,6 +1258,8 @@ _::-webkit-full-page-media, _:future, :root .souba_l select { background-color: 
 .souba_l button { background-color: #ff6900; padding:10px 30px; border:solid 2px #ff6900; border-radius: 10px; margin: 20px 0; font-size: 160%; color: #fff; font-family: 'Noto Sans JP', sans-serif; font-weight: 700; font-style: normal; cursor : pointer; transition: all 0.3s ease; }
 .souba_l button:hover { background-color: #fff; color:#ff6900; border:solid 2px #ff6900; }
 
+.kibou_label {display: none;}
+
 .souba_r { width: 70%; padding-left: 3%; font-family: 'Noto Sans JP', sans-serif; font-weight: 700; font-style: normal; }
 
 .step-3list { display:flex; flex-wrap:wrap; justify-content:space-between; }
