--- a/src/css/embedyoutube.module.scss
+++ b/src/css/embedyoutube.module.scss
@@ -1,11 +1,12 @@
-.youtubewrapper{
-    margin-bottom: 50px;
-    max-width: 1200px;
-    aspect-ratio: 16/9;
-    .youtube{
-        width: 100%;
-        height: 100%;
-    }
+.youtubewrapper {
+  margin-bottom: 50px;
+  max-width: 1200px;
+  aspect-ratio: 16/9;
 }
-
-.youtubewrapper:hover { cursor : pointer; }
+.youtube {
+  width: 100%;
+  height: 100%;
+}
+.youtubewrapper:hover {
+  cursor: pointer;
+}
