ブログ記事一覧ページでテキストの折り返し設定を追加

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3228,6 +3228,7 @@ _:future,
   font-family: "Noto Sans JP", sans-serif;
   font-style: normal;
   font-size: 12px;
+  word-wrap: break-word;
   time {
     display: block;
   }
