口コミアイコン表示位置微調整

--- a/src/css/kuchikomi.scss
+++ b/src/css/kuchikomi.scss
@@ -80,7 +80,7 @@
 }
 
 .star_icon {
-  vertical-align: middle;
+  vertical-align: middle !important;
   margin-bottom: 10px;
   margin-left: 5px;
 }
