--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6307,3 +6307,11 @@ form label {
     bottom: 4rem!important;
   }
 }
+
+.totto_kun { position: fixed; bottom: 0; left: -30px; z-index: 10;
+  @media screen and (max-width: 768px) {
+    left: 0;
+    bottom: 40px;
+    img { height: 110px;}
+  }
+}
