--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6308,10 +6308,32 @@ form label {
   }
 }
 
-.totto_kun { position: fixed; bottom: 0; left: -30px; z-index: 10;
+.totto_kun { position: fixed; bottom: 0; left: -30px; z-index: 21;
   @media screen and (max-width: 768px) {
-    left: 0;
+    left: -40px;
     bottom: 40px;
-    img { height: 110px;}
+    img { height: 200px;}
   }
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.fade-in {
+  animation-name: fadeIn;
+  animation-duration: 0.2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+
+.fade-out {
+  animation-name: fadeOut;
+  animation-duration: 0.2s;
+  animation-fill-mode: forwards;
 }
