--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6309,10 +6309,15 @@ form label {
 }
 
 .totto_kun { position: fixed; bottom: 0; left: -30px; z-index: 21;
+  @media screen and (max-width: 1024px) {
+    left: -40px;
+    bottom: 40px;
+    img { height: 220px;}
+  }
   @media screen and (max-width: 768px) {
     left: -40px;
     bottom: 40px;
-    img { height: 200px;}
+    img { height: 240px;}
   }
 }
 
